--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
         <ul>
             <li>
                <a href="">
-                <img src="./images/techno.jpg" alt="Технокряк">
+                <img src="./images/techno.jpg" alt="Технокряк" width="370px">
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
                </a> 
@@ -54,7 +54,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/newOrlean.jpg" alt="Постер New Orlean vs Golden Star">
+                    <img src="./images/newOrlean.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </a>
@@ -62,7 +62,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/seafood.jpg" alt="Ресторан Seafood">
+                    <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370px">
                     <h2>Ресторан Seafood</h2>
                     <p>Додаток</p>
                 </a>
@@ -70,14 +70,14 @@
 
             <li>
                 <a href="">
-                    <img src="./images/prime.jpg" alt="Проєкт Prime">
+                    <img src="./images/prime.jpg" alt="Проєкт Prime" width="370px">
                     <h2>Проєкт Prime</h2>
                     <p>Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./images/boxes.jpg" alt="Проєкт Boxes">
+                    <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370px">
                     <h2>Проєкт Boxes</h2>
                     <p>Додаток</p>
                 </a>
@@ -85,7 +85,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/inspiration.jpg" alt="Inspiration has no Borders">
+                    <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370px">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </a>
@@ -93,7 +93,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/limited.jpg" alt="Видання Limited Edition">
+                    <img src="./images/limited.jpg" alt="Видання Limited Edition" width="370px">
                     <h2>Видання Limited Edition</h2>
                     <p>Дизайн</p>
                 </a>
@@ -101,7 +101,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/lab.jpg" alt="Проєкт LAB">
+                    <img src="./images/lab.jpg" alt="Проєкт LAB" width="370px">
                     <h2>Проєкт LAB</h2>
                     <p>Маркетинг</p>
                 </a>
@@ -109,7 +109,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/growing.jpg" alt="Growing Business">
+                    <img src="./images/growing.jpg" alt="Growing Business" width="370px">
                     <h2>Growing Business</h2>
                     <p>Додаток</p>
                 </a>
