добавил оформление цвета

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="page">
     
     <!--Шапка сайта-->
 
     <header>
         <nav>
-            <a href="#"> <span>Web</span>Studio </a>
+            <a href="#"  class="logo"> <span class="logo-second">Web</span>Studio</a>
 
-            <ul>
-             <li><a href="">Студія</a></li>
-             <li><a href="">Портфоліо</a></li>
-             <li><a href="">Контакти</a></li>  
+            <ul class="site-nav list">
+             <li><a href="" class="link">Студія</a></li>
+             <li class="specification"><a href="" class="link">Портфоліо</a></li>
+             <li><a href="" class="link">Контакти</a></li>  
             </ul>
         </nav>
 
-        <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+        <li class="specification"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="auth-nav-tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -33,85 +33,85 @@
     <main>
         <section>
         <h1>Portfolio</h1>
-        <ul>
+        <ul class="filter">
             <li>
-                <button type="button">Усі</button>
-                <button type="button">Веб-сайти</button>
-                <button type="button">Додатки</button>
-                <button type="button">Дизайн</button>
-                <button type="button">Маркетинг</button>
+                <button type="button" class="button">Усі</button>
+                <button type="button" class="link">Веб-сайти</button>
+                <button type="button" class="link">Додатки</button>
+                <button type="button" class="link">Дизайн</button>
+                <button type="button" class="link">Маркетинг</button>
             </li>
         </ul>
 
-        <ul>
+        <ul class="list-works">
             <li>
                <a href="">
                 <img src="./images/techno.jpg" alt="Технокряк" width="370px">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="title">Технокряк</h2>
+                <p class="paragraph">Веб-сайт</p>
                </a> 
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/newOrlean.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="paragraph">Дизайн</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370px">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="paragraph">Додаток</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/prime.jpg" alt="Проєкт Prime" width="370px">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="title">Проєкт Prime</h2>
+                    <p class="paragraph">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370px">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                    <h2 class="title">Проєкт Boxes</h2>
+                    <p class="paragraph">Додаток</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370px">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="paragraph">Веб-сайт</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/limited.jpg" alt="Видання Limited Edition" width="370px">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title">Видання Limited Edition</h2>
+                    <p class="paragraph">Дизайн</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/lab.jpg" alt="Проєкт LAB" width="370px">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="title">Проєкт LAB</h2>
+                    <p class="paragraph">Маркетинг</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/growing.jpg" alt="Growing Business" width="370px">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                    <h2 class="title">Growing Business</h2>
+                    <p class="paragraph">Додаток</p>
                 </a>
             </li>
         </ul>
