--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
             <a href="#"  class="logo"> <span class="logo-second">Web</span>Studio</a>
 
             <ul class="site-nav list">
-             <li><a href="" class="link">Студія</a></li>
-             <li class="specification"><a href="" class="link">Портфоліо</a></li>
+             <li><a href="./index.html" class="link">Студія</a></li>
+             <li class="specification"><a href="./index.html" class="link">Портфоліо</a></li>
              <li><a href="" class="link">Контакти</a></li>  
             </ul>
         </nav>
@@ -120,15 +120,15 @@
 
     <!--Footer-->
 
-    <footer>
-      <a href="#"> <span>Web</span>Studio </a>
+    <footer class="footer list">
+      <a href="#"  class="logo"> <span class="logo-second">Web</span>Studio</a>
 
       <address>
-        <a href="">м. Київ, пр-т Лесі Українки, 26</a>
+        <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
         <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         <br />
-        <a href="tel:+38096111111">+38 096 111 11 11</a>
+        <a href="tel:+38096111111" class="link">+38 096 111 11 11</a>
       </address>
     </footer>
 
