Portfolio. Text and background

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <!--Чим ми займаємося-->
 
-      <section class="sphre">
+      <section class="sphere">
         <h2 class="sphere-title">Чим ми займаємося</h2>
         <ul>
           <li>
