--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body class="page">
 
@@ -13,7 +16,7 @@
 
     <header>
       <nav>
-        <a href="#" class="logo"> <span class="logoaccent">Web</span>Studio </a>
+        <a href="./index.html" class="logo"> <span class="logoaccent">Web</span>Studio </a>
 
         <ul class="site-nav">
           <li><a href="" class="link current">Студія</a></li>
@@ -128,7 +131,7 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="#" class="logo"> <span class="logoaccent">Web</span>Studio </a>
+      <a href="./index.html" class="logo"> <span class="logoaccent">Web</span>Studio </a>
 
       <address>
         <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
