--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
     <header>
         <nav>
-            <a href="#" class="logo"> <span class="logoaccent">Web</span>Studio </a>
+            <a href="./index.html" class="logo"> <span class="logoaccent">Web</span>Studio </a>
 
             <ul class="site-nav">
           <li><a href="./index.html" class="link ">Студія</a></li>
@@ -35,13 +35,11 @@
         <section>
         <h1>Portfolio</h1>
         <ul class="filter">
-            <li>
                 <button type="button" class="button primary portfolio">Усі</button>
                 <button type="button" class="link secondary">Веб-сайти</button>
                 <button type="button" class="link secondary">Додатки</button>
                 <button type="button" class="link secondary">Дизайн</button>
                 <button type="button" class="link secondary">Маркетинг</button>
-            </li>
         </ul>
 
         <ul class="work">
@@ -122,7 +120,7 @@
     <!--Footer-->
 
     <footer class="footer">
-      <a href="#" class="logo"> <span class="logoaccent">Web</span>Studio </a>
+      <a href="./index.html" class="logo"> <span class="logoaccent">Web</span>Studio </a>
 
       <address>
         <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
