--- a/portfolio.html
+++ b/portfolio.html
@@ -34,18 +34,17 @@
     <main>
         <section>
         <h1>Portfolio</h1>
-        <ul class="filter">
+    
                 <button type="button" class="button primary portfolio">Усі</button>
                 <button type="button" class="link secondary">Веб-сайти</button>
                 <button type="button" class="link secondary">Додатки</button>
                 <button type="button" class="link secondary">Дизайн</button>
                 <button type="button" class="link secondary">Маркетинг</button>
-        </ul>
 
         <ul class="work">
             <li>
                <a href="">
-                <img src="./images/techno.jpg" alt="Технокряк"  width="370px">
+                <img src="./images/techno.jpg" alt="Технокряк"  width="370">
                 <h2 class="work-list">Технокряк</h2>
                 <p class="work-text">Веб-сайт</p>
                </a> 
@@ -53,7 +52,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/newOrlean.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
+                    <img src="./images/newOrlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                     <h2 class="work-list">Постер New Orlean vs Golden Star</h2>
                     <p class="work-text">Дизайн</p>
                 </a>
@@ -61,7 +60,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370px">
+                    <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
                     <h2 class="work-list">Ресторан Seafood</h2>
                     <p class="work-text">Додаток</p>
                 </a>
@@ -69,14 +68,14 @@
 
             <li>
                 <a href="">
-                    <img src="./images/prime.jpg" alt="Проєкт Prime" width="370px">
+                    <img src="./images/prime.jpg" alt="Проєкт Prime" width="370">
                     <h2 class="work-list">Проєкт Prime</h2>
                     <p class="work-text">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370px">
+                    <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370">
                     <h2 class="work-list">Проєкт Boxes</h2>
                     <p class="work-text">Додаток</p>
                 </a>
@@ -84,7 +83,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370px">
+                    <img src="./images/inspiration.jpg" alt="Inspiration has no Borders" width="370">
                     <h2 class="work-list">Inspiration has no Borders</h2>
                     <p class="work-text">Веб-сайт</p>
                 </a>
@@ -92,7 +91,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/limited.jpg" alt="Видання Limited Edition" width="370px">
+                    <img src="./images/limited.jpg" alt="Видання Limited Edition" width="370">
                     <h2 class="work-list">Видання Limited Edition</h2>
                     <p class="work-text">Дизайн</p>
                 </a>
@@ -100,7 +99,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/lab.jpg" alt="Проєкт LAB" width="370px">
+                    <img src="./images/lab.jpg" alt="Проєкт LAB" width="370">
                     <h2 class="work-list">Проєкт LAB</h2>
                     <p class="work-text">Маркетинг</p>
                 </a>
@@ -108,7 +107,7 @@
 
             <li>
                 <a href="">
-                    <img src="./images/growing.jpg" alt="Growing Business" width="370px">
+                    <img src="./images/growing.jpg" alt="Growing Business" width="370">
                     <h2 class="work-list">Growing Business</h2>
                     <p class="work-text">Додаток</p>
                 </a>
