--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Портфоліо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -40,100 +46,144 @@
       <section>
         <h1>Portfolio</h1>
 
-        <button type="button" class="button primary portfolio">Усі</button>
-        <button type="button" class="link secondary">Веб-сайти</button>
-        <button type="button" class="link secondary">Додатки</button>
-        <button type="button" class="link secondary">Дизайн</button>
-        <button type="button" class="link secondary">Маркетинг</button>
-
+        <ul>
+          <li>
+            <button type="button" class="button primary portfolio">Усі</button>
+          </li>
+          <li>
+            <button type="button" class="link secondary">Веб-сайти</button>
+          </li>
+          <li>
+            <button type="button" class="link secondary">Додатки</button>
+          </li>
+          <li>
+            <button type="button" class="link secondary">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="link secondary">Маркетинг</button>
+          </li>
+        </ul>
         <ul class="work">
           <li>
-            <a href="">
-              <img src="./images/techno.jpg" alt="Технокряк" width="370" />
+            <a class="work-link" href="#">
+              <img
+                src="./images/techno.jpg"
+                alt="Технокряк"
+                width="370"
+                height="294"
+              />
               <h2 class="work-list">Технокряк</h2>
               <p class="work-text">Веб-сайт</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="work-link" href="">
               <img
                 src="./images/newOrlean.jpg"
-                alt="Постер New Orlean vs Golden Star"
+                alt="Постер Новий Орлеан проти Голден Стар"
                 width="370"
+                height="294"
               />
-              <h2 class="work-list">Постер New Orlean vs Golden Star</h2>
+              <h2 class="work-list">
+                Постер <span lang="en">Orlean vs Golden Star</span>
+              </h2>
               <p class="work-text">Дизайн</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="work-link" href="">
               <img
                 src="./images/seafood.jpg"
-                alt="Ресторан Seafood"
+                alt="Ресторан Морепродукти"
                 width="370"
+                height="294"
               />
-              <h2 class="work-list">Ресторан Seafood</h2>
+              <h2 class="work-list">Ресторан <span lang="en">Seafood</span></h2>
               <p class="work-text">Додаток</p>
             </a>
           </li>
 
           <li>
-            <a href="">
-              <img src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
-              <h2 class="work-list">Проєкт Prime</h2>
+            <a class="work-link" href="">
+              <img
+                src="./images/prime.jpg"
+                alt="Проєкт Прем'єр"
+                width="370"
+                height="294"
+                gt
+              />
+              <h2 class="work-list">Проєкт <spam lang="en">Prime</spam></h2>
               <p class="work-text">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370" />
-              <h2 class="work-list">Проєкт Boxes</h2>
+            <a class="work-link" href="">
+              <img
+                src="./images/boxes.jpg"
+                alt="Проєкт Коробки"
+                width="370"
+                height="294"
+                gt
+              />
+              <h2 class="work-list">Проєкт <span lang="en">Boxes</span></h2>
               <p class="work-text">Додаток</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="work-link" href="">
               <img
                 src="./images/inspiration.jpg"
-                alt="Inspiration has no Borders"
+                alt="Натхнення не має кордонів"
                 width="370"
+                height="294"
               />
-              <h2 class="work-list">Inspiration has no Borders</h2>
+              <h2 class="work-list">
+                <span lang="en">Inspiration has no Borders</span>
+              </h2>
               <p class="work-text">Веб-сайт</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="work-link" href="">
               <img
                 src="./images/limited.jpg"
-                alt="Видання Limited Edition"
+                alt="Видання Обмежене видання"
                 width="370"
+                height="294"
               />
-              <h2 class="work-list">Видання Limited Edition</h2>
+              <h2 class="work-list">
+                Видання <span lang="en">Limited Edition</span>
+              </h2>
               <p class="work-text">Дизайн</p>
             </a>
           </li>
 
           <li>
-            <a href="">
-              <img src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
-              <h2 class="work-list">Проєкт LAB</h2>
+            <a class="work-link" href="">
+              <img
+                src="./images/lab.jpg"
+                alt="Проєкт ЛАБ"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-list">Проєкт <span lang="en">LAB</span></h2>
               <p class="work-text">Маркетинг</p>
             </a>
           </li>
 
           <li>
-            <a href="">
+            <a class="work-link" href="">
               <img
                 src="./images/growing.jpg"
-                alt="Growing Business"
+                alt="Зростаючий бізнес"
                 width="370"
+                height="294"
               />
-              <h2 class="work-list">Growing Business</h2>
+              <h2 class="work-list"><span lang="en">Business</span></h2>
               <p class="work-text">Додаток</p>
             </a>
           </li>
@@ -148,14 +198,20 @@
         <span class="logoaccent">Web</span>Studio
       </a>
 
-      <address>
-        <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
-        <br />
-        <a href="mailto:info@devstudio.com" class="contacts"
-          >info@devstudio.com</a
-        >
-        <br />
-        <a href="tel:+38096111111" class="contacts">+38 096 111 11 11</a>
+      <address class="portfolio-footer">
+        <ul>
+          <li>
+            <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+38096111111" class="contacts">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
