--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Веб Студія</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,27 +55,27 @@
         <ul>
           <li>
             <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
             <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
             <h3 class="features-title">ПЛАНУВАННЯ</h3>
-            <p>
+            <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
             <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -89,13 +89,28 @@
         <h2 class="sphere-title">Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/Project.jpg" alt="project" width="370" />
+            <img
+              src="./images/project.jpg"
+              alt="проджект"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/app.jpg" alt="app" width="370" />
+            <img
+              src="./images/app.jpg"
+              alt="застосунок"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/picture.jpg" alt="picture" width="370" />
+            <img
+              src="./images/picture.jpg"
+              alt="картинка"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -107,34 +122,42 @@
           <li>
             <img
               src="images/ihorDemiyanenko.jpg"
-              alt="Product Designer"
+              alt="Дизайнер продукта"
               width="270"
+              height="260"
             />
             <h3 class="team-list">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
               src="images/olgaRepina.jpg"
-              alt="Frontend Developer"
+              alt="Фронтенд-розробник"
               width="270"
+              height="260"
             />
             <h3 class="team-list">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="images/nickoleTarasov.jpg" alt="Marketing" width="270" />
+            <img
+              src="images/nickoleTarasov.jpg"
+              alt="Маркетинг"
+              width="270"
+              height="260"
+            />
             <h3 class="team-list">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
               src="images/michailoYermakov.jpg"
-              alt="UI Designer"
+              alt="Дизайнер ІК"
               width="270"
+              height="260"
             />
             <h3 class="team-list">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -150,7 +173,12 @@
       <address class="address">
         <ul>
           <li>
-            <a class="contacts" href="#">м. Київ, пр-т Лесі Українки, 26</a>
+            <a
+              class="contacts-address"
+              href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              target="_blank"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts"
