--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="page">
+  <body>
     <!--Шапка сайта-->
 
     <header>
       <nav>
-        <a href="./index.html" class="logo">
+        <a href="./index.html" class="logo-main">
           <span class="logoaccent">Web</span>Studio
         </a>
 
@@ -166,7 +166,7 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="./index.html" class="logo">
+      <a href="./index.html" class="logo-footer">
         <span class="logoaccent">Web</span>Studio
       </a>
 
