--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
     <header>
       <nav>
-        <a href="./index.html" class="logo">
+        <a href="./index.html" class="logo-main">
           <span class="logoaccent">Web</span>Studio
         </a>
 
@@ -48,19 +48,19 @@
 
         <ul>
           <li>
-            <button type="button" class="button primary portfolio">Усі</button>
+            <button type="button" class="button-primary">Усі</button>
           </li>
           <li>
-            <button type="button" class="link secondary">Веб-сайти</button>
+            <button type="button" class="button-primary">Веб-сайти</button>
           </li>
           <li>
-            <button type="button" class="link secondary">Додатки</button>
+            <button type="button" class="button-primary">Додатки</button>
           </li>
           <li>
-            <button type="button" class="link secondary">Дизайн</button>
+            <button type="button" class="button-primary">Дизайн</button>
           </li>
           <li>
-            <button type="button" class="link secondary">Маркетинг</button>
+            <button type="button" class="button-primary">Маркетинг</button>
           </li>
         </ul>
         <ul class="work">
@@ -194,14 +194,19 @@
     <!--Footer-->
 
     <footer class="footer">
-      <a href="./index.html" class="logo">
+      <a href="./index.html" class="logo-footer">
         <span class="logoaccent">Web</span>Studio
       </a>
 
-      <address class="portfolio-footer">
+      <address class="address">
         <ul>
           <li>
-            <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
+            <a
+              class="contacts-address"
+              href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              target="_blank"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts"
