--- a/portfolio.html
+++ b/portfolio.html
@@ -112,9 +112,8 @@
                 alt="Проєкт Прем'єр"
                 width="370"
                 height="294"
-                gt
               />
-              <h2 class="work-list">Проєкт <spam lang="en">Prime</spam></h2>
+              <h2 class="work-list">Проєкт <span lang="en">Prime</span></h2>
               <p class="work-text">Маркетинг</p>
             </a>
           </li>
@@ -125,7 +124,6 @@
                 alt="Проєкт Коробки"
                 width="370"
                 height="294"
-                gt
               />
               <h2 class="work-list">Проєкт <span lang="en">Boxes</span></h2>
               <p class="work-text">Додаток</p>
