--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               height="260"
             />
             <h3 class="team-list">Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -137,7 +137,7 @@
               height="260"
             />
             <h3 class="team-list">Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -147,7 +147,7 @@
               height="260"
             />
             <h3 class="team-list">Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -157,7 +157,7 @@
               height="260"
             />
             <h3 class="team-list">Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
